--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ permalink: /about/
   <p> Hi, I am Won. <br> I have been writing here what I learned. </p>
   <a href="mailto:trilliwon@gmail.com" class="fa fa-envelope"> trilliwon@gmail.com</a>
   <br>
-  <a href="http://www.trilliwon.com/" class="fa fa-home"> Home page </a>
+  <a href="http://www.trilliwon.com/trilliwon" class="fa fa-home"> Home page </a>
   <br>
   <a href="https://github.com/trilliwon/" class="fa fa-github"> trilliwon</a>
   <br>
